fixed gap between singlevinyl list elements

--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,6 @@ main {
         background-color: var(--form-color) !important;
         color: var(--tertiary-color) !important;
         border: 1px solid var(--tertiary-color) !important;
-
     }
 
     .transition-img {
@@ -316,7 +315,6 @@ main {
 .list-group-item {
     padding: 15px;
     border: none;
-    border-bottom: 1px solid #ddd;
     display: flex;
     flex-direction: column;
 
